<resources>
    <string name="app_name">Car Hub</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet">Make Sure u Have an Active Internet Connection</string>
    <string name="ok">ok</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="register">Register</string>
    <string name="enter_password">Enter password</string>
    <string name="this_app_mockup">this app mockup</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_username">Enter Username</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login">Login</string>
    <string name="need_an_account">Need an account ?</string>
    <string name="logout_message">Are you sure u want to logout</string>
    <string name="quit">Want to Quit</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="profile_image_desc">profile image desc</string>
    <string name="title_home">Home</string>
    <string name="title_payment">Payment</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_history">History</string>
    <string name="title_about">about</string>
    <string name="title_settings">settings</string>
</resources>
