<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.jamesnyakush.carhub.ui.home.settings.profile.ProfileViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ededed">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/activity_settings_page"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ededed"
                    android:gravity="center"
                    android:minHeight="180dp"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/dotted">

                        <ImageView
                            android:id="@+id/iv_profile_background"
                            android:layout_width="140dp"
                            android:layout_height="140dp"
                            android:layout_gravity="center"
                            android:layout_marginRight="2dp"
                            android:padding="5dp"
                            android:src="@drawable/ic_prfofile_photo_nav_drawer"
                            android:visibility="visible" />

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:padding="15dp"
                            android:src="@drawable/ic_camera"
                            android:visibility="visible" />

                        <ImageView
                            android:id="@+id/iv_profile_photo"
                            android:layout_width="140dp"
                            android:layout_height="140dp"
                            android:layout_gravity="center"
                            android:padding="8dp"
                            android:src="@drawable/ic_prfofile_photo_nav_drawer"
                            android:visibility="gone"
                            android:contentDescription="@string/profile_image_desc" />

                        <ImageView
                            android:id="@+id/picker"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="right"
                            android:src="@drawable/ic_edit_button" />
                    </FrameLayout>
                </LinearLayout>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="4dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="vertical">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:background="@drawable/layout_border"
                            android:hint="@string/enter_username"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:padding="12dp" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:background="@drawable/layout_border"
                            android:hint="@string/enter_email"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:padding="12dp" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:background="@drawable/layout_border"
                            android:hint="@string/enter_phone"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:padding="12dp" />


                        <Button
                            android:id="@+id/login"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:background="@drawable/login_btn"
                            android:text="@string/login"
                            android:textColor="@android:color/white" />


                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
